; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_uhci.c_uhci_do_poll.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_uhci.c_uhci_do_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_bus = type { i32 }
%struct.uhci_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_bus*)* @uhci_do_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uhci_do_poll(%struct.usb_bus* %0) #0 {
  %2 = alloca %struct.usb_bus*, align 8
  %3 = alloca %struct.uhci_softc*, align 8
  store %struct.usb_bus* %0, %struct.usb_bus** %2, align 8
  %4 = load %struct.usb_bus*, %struct.usb_bus** %2, align 8
  %5 = call %struct.uhci_softc* @UHCI_BUS2SC(%struct.usb_bus* %4)
  store %struct.uhci_softc* %5, %struct.uhci_softc** %3, align 8
  %6 = load %struct.uhci_softc*, %struct.uhci_softc** %3, align 8
  %7 = getelementptr inbounds %struct.uhci_softc, %struct.uhci_softc* %6, i32 0, i32 0
  %8 = call i32 @USB_BUS_LOCK(i32* %7)
  %9 = load %struct.uhci_softc*, %struct.uhci_softc** %3, align 8
  %10 = call i32 @uhci_interrupt_poll(%struct.uhci_softc* %9)
  %11 = load %struct.uhci_softc*, %struct.uhci_softc** %3, align 8
  %12 = getelementptr inbounds %struct.uhci_softc, %struct.uhci_softc* %11, i32 0, i32 0
  %13 = call i32 @USB_BUS_UNLOCK(i32* %12)
  ret void
}

declare dso_local %struct.uhci_softc* @UHCI_BUS2SC(%struct.usb_bus*) #1

declare dso_local i32 @USB_BUS_LOCK(i32*) #1

declare dso_local i32 @uhci_interrupt_poll(%struct.uhci_softc*) #1

declare dso_local i32 @USB_BUS_UNLOCK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
